<?xml version="1.0" encoding="utf-8"?>
<!-- main.xml -->
<!-- Tip Calculator's XML Layout -->
<TableLayout xmlns:android1="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:stretchColumns="1,2,3" >

    <!-- tableRow0 -->

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/billTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingRight="5dp"
            android:text="@string/billTotal"
            android:textSize="23sp" />

        <EditText
            android:id="@+id/idValorTexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:lines="1"
            android:maxLength="12"
            android:textSize="23sp" />

        <ImageButton
            android:id="@+id/btnSpeak"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/falar"
            android:src="@android:drawable/ic_btn_speak_now" />
    </TableRow>

    <!-- tableRow4 -->

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/idPercentual"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusable="false"
            android:gravity="left"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:text="Taxa (10.0%)"
            android:textSize="23sp" />

        <NumberPicker
            android:id="@+id/npInteiro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="70dip" />

        <NumberPicker
            android:id="@+id/npDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="70dip" />

        <!--
        SeekBar
            android:id="@+id/idPercentualSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:layout_weight="1"
            android:max="1000"
            android:paddingBottom="5dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:progress="0" />

        <TextView
            android:id="@+id/idPercentual"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusable="false"
            android:gravity="right"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:text="0%"
            android:textColor="#000"
            android:textSize="23sp" /
        -->
    </TableRow>

    <!-- tableRow5 -->

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tipCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingRight="5dp"
            android:text="@string/desc"
            android:textSize="23sp" />

        <EditText
            android:id="@+id/idDescontoTexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:focusable="false"
            android:gravity="right"
            android:longClickable="false"
            android:text="@string/zero"
            android:textSize="23sp" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/totalCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/total"
            android:textSize="23sp" />

        <EditText
            android:id="@+id/idTotalDescontoFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:focusable="false"
            android:gravity="right"
            android:longClickable="false"
            android:text="@string/zero"
            android:textIsSelectable="true"
            android:textSize="23sp" />
    </TableRow>

</TableLayout>