<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_span="2"
    android:background="@drawable/bg_striped_azul"
     >
<TableLayout 
    android:id="@+id/tableLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp"
    android:stretchColumns="1,2,3"
     >

    <!-- tableRow0 -->

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_span="4"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/idDjurosSimplesRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onRadioButtonClicked"
                android:text="@string/jurosSimples"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/idDjurosComposto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/jurosComposto"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RadioGroup>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/billTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingRight="5dp"
            android:text="Valor"
            android:textSize="18sp" 
            style="@style/texto"
            />

        <EditText
            android:id="@+id/idValorPresente"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:lines="1"
            android:maxLength="12"
            android:hint="@string/valor_presente"
            android:textSize="18sp" 
            style="@style/campo"/>

        <!--
             ImageButton
            android:id="@+id/btnSpeak"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/falar"
            android:src="@android:drawable/ic_btn_speak_now" /
        -->
    </TableRow>

    <!-- tableRow4 -->

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


       <TextView
            android:id="@+id/idPercentual"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingRight="5dp"
            android:text="@string/custom"
            android:textSize="18sp" 
            style="@style/texto"
            />
        <EditText
            android:id="@+id/idValorPercentual"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:lines="1"
            android:maxLength="7"
            android:textSize="18sp" 
            style="@style/campo"
            />

        <Spinner
            android:id="@+id/idPeriodoTx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/periodo"
            android:prompt="@string/label_tx_periodo" />
    </TableRow>

    <!-- tableRow5 -->

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tipCustomTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingRight="5dp"
            android:text="Tempo"
            android:textSize="18sp" 
            style="@style/texto"/>

        <EditText
            android:id="@+id/idTempo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:lines="1"
            android:maxLength="7"
            android:textSize="18sp" 
            style="@style/campo"/>

        <Spinner
            android:id="@+id/idTipoPeriodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/periodo"
            android:prompt="@string/label_tx_periodo" />
    </TableRow>


  <include
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="0.01"
      layout="@layout/resposta" />

</TableLayout>
</ScrollView>